# src/swagger.json
@@ -20,7 +20,7 @@
             "type": "integer",
             "description": "User unique identifier"
           },
-          "full_name": {
+          "fullName": {
             "type": "string",
             "description": "User's full name"
           },
@@ -40,12 +40,12 @@
             "description": "Last update timestamp"
           }
         },
-        "required": ["full_name", "email"]
+        "required": ["fullName", "email"]
       },
       "UserSignup": {
         "type": "object",
         "properties": {
-          "full_name": {
+          "fullName": {
             "type": "string",
             "minLength": 2,
             "maxLength": 100,
@@ -64,7 +64,7 @@
             "description": "User's password"
           }
         },
-        "required": ["full_name", "email", "password"]
+        "required": ["fullName", "email", "password"]
       },
       "UserSignin": {
         "type": "object",
